--- a/index.html
+++ b/index.html
@@ -1,1 +1,285 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="keywords"
+    content="Shubham Bhati, portfolio, Shubham Bhati, personal portfolio life codes, portfolio design, portfolio website, personal portfolio" />
+  <meta name="description" content="Welcome to Shubham's Portfolio. Java Backend Developer" />
+  <!-- Custom CSS -->
+  <link rel="stylesheet" href="./Assets/css/style.css">
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://unpkg.com/github-calendar@latest/dist/github-calendar-responsive.css" />
+
+
+
+  <!-- Favicon -->
+
+  <link id='favicon' rel="shortcut icon"
+    href=""
+    type="image/x-png">
+  <title>Saktheeswari's Portfolio</title>
+  <script src="https://unpkg.com/eva-icons"></script>
+</head>
+
+<body>
+
+
+
+  <!-- navbar starts -->
+  <header>
+    <a href="/" class="logo"><i class=""></i> Saktheeswari Dharmaraja</a>
+
+    <div id="menu" style="color: white;" class="fas fa-bars"></div>
+    <nav id="nav-menu" class="navbar">
+      <ul>
+        <li><a class="active nav-link home" href="#home">Home</a></li>
+        <li><a class="nav-link about" href="#about">About Me</a></li>
+        <li><a class="nav-link skills" href="#skills">Tech Stack</a></li>
+        <li><a class="nav-link projects" href="#projects">Projects</a></li>
+        <li><a class="nav-link contact" href="#contact2">Contact</a></li>
+        <li><button id="resume-button-1">
+            <a id="resume-link-1" href="Assets/Saktheeswari-D-FlowCV-Resume-20240527 (4).pdf" class="btn nav-link resume"><span>Resume </span>
+              <i class="fas fa-chevron-right"></i>
+            </a>
+          </button></li>
+      </ul>
+    </nav>
+  </header>
+
+
+  <section class="home2" id="home">
+
+
+    <div class="content">
+      <h2>Hi There,<br /> I'm <span>Saktheeswari</span></h2>
+      <p>i am into <span class="typing-text"></span></p>
+      <a href="#about" class="btn"><span>About Me</span>
+        <i class="fas fa-arrow-circle-down"></i>
+      </a>
+      <div class="socials">
+        <ul class="social-icons">
+          <li><a class="linkedin" aria-label="LinkedIn" href="https://www.linkedin.com/in/saktheeswaridharmaraja/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+          <li><a class="github" aria-label="GitHub" href="https://github.com/Saktheeswarii/" target="_blank"><i class="fab fa-github"></i></a></li>
+        </ul>
+      </div>
+    </div>
+    <div class="image">
+      <img draggable="false" class="tilt" id="new23"
+        src="Assets/images/s11.jpg" alt=""
+        style="border-radius: 30%;">
+    </div>
+  </section>
+  <!-- hero section ends -->
+
+
+  <!-- about section starts -->
+  <br><br><br><br><br><br>
+  <section class="about about2 section" id="about">
+    <br><br><br><br><br><br>
+    <h2 class="heading"><i class="fas fa-user-alt"></i> About <span>Me</span></h2>
+
+    <div class="row">
+
+      <div class="image">
+        <img draggable="false" class="tilt home-img" src="./Assets/images/s11.jpg" alt="">
+      </div>
+      <div class="content">
+        <h3 id="user-detail-name">I'm Saktheeswari <i class=""></i></h3>
+        <span class="tag">Problem Solver &amp; Web Developer.<i
+            class="fas fa-mobile-altJava Backend DeveloperJava Backend Developer"></i></span>
+
+        <p id="user-detail-intro">I am a Computer Science student at Karpagam College of Engineering, specializing in Computer Science and Design. With a passion for programming and a knack for problem-solving, I am eager to apply my technical knowledge and contribute to innovative projects. I thrive in team environments and am proficient in multiple programming languages and software development methodologies. </p>
+
+    
+        <div class="resumebtn">
+          <button id="resume-button-2">
+
+            <a id="resume-link-2" href="Assets/Saktheeswari-D-FlowCV-Resume-20240527 (4).pdf" class="btn"><span>Resume</span>
+              <i class="fas fa-chevron-right"></i>
+            </a>
+          </button>
+
+        </div>
+
+      </div>
+    </div>
+  </section>
+  <!-- about section ends -->
+
+  <!-- skills section starts -->
+  <section class="skills2" id="skills">
+    <br><br><br><br><br>
+    <h2 class="heading"><i class="fas fa-laptop-code"></i>Tech<span> Stack</span></h2>
+    <br>
+    <div class="container">
+      <div class="row" id="skillsContainer">
+
+      </div>
+    </div>
+
+  </section>
+  <!-- skills section ends -->
+
+
+
+  <!-- work project section starts -->
+  <section class="work" id="projects">
+    <br><br><br><br><br><br>
+    <h2 class="heading"><i class="fas fa-laptop-code"></i> Projects <span>Made</span></h2>
+    <div class="box-container"> </div>
+
+
+  </section>
+  <!-- work project section ends -->
+  <!-- contact section starts -->
+  <section class="contact2" id="contact2">
+    <br><br><br><br>
+    <h2 class="heading"><i class="fas fa-headset"></i> Get in <span>Touch</span></h2>
+
+    <div class="container">
+      <div class="content">
+        <div class="image-box">
+          <img draggable="false" src="./Assets/images/contact1.png" alt="">
+        </div>
+        <form id="contact-form">
+
+          <div class="form-group">
+            <div class="field">
+              <input type="text" name="name" placeholder="Name" required>
+              <i class='fas fa-user'></i>
+            </div>
+            <div class="field">
+              <input type="email" name="email" placeholder="Email" required autocapitalize="off">
+              <i class="fas fa-envelope"></i>
+
+            </div>
+            <div class="field">
+              <input type="number" name="phone" placeholder="Phone">
+              <i class='fas fa-phone-alt'></i>
+            </div>
+
+            <div class="message">
+              <textarea placeholder="Message" name="message" required></textarea>
+              <i class="fas fa-comment-dots"></i>
+            </div>
+
+          </div>
+          <div class="button-area">
+            <button type="submit" id="send"> Submit <i class="fa fa-paper-plane"></i></button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </section>
+  <!-- contact section ends -->
+
+
+  <!-- footer section starts -->
+  <section class="footer" id="contact">
+
+    <div class="box-container">
+
+      <div class="box">
+        <h3>Saktheeswari's Portfolio</h3>
+        <p>Thank you for visiting my portfolio website. Connect with me over socials. <br /> <br /> Keep Rising 🚀</p>
+      </div>
+
+      <div class="box">
+        <h3>quick links</h3>
+        <a href="#home"><i class="fas fa-chevron-circle-right"></i> home</a>
+        <a href="#about"><i class="fas fa-chevron-circle-right"></i> about</a>
+        <a href="#skills"><i class="fas fa-chevron-circle-right"></i> skills</a>
+
+        <a href="#projects"><i class="fas fa-chevron-circle-right"></i> Projects</a>
+
+      </div>
+      <!--  -->
+      <div id="contactatlast" class="box">
+        <h3>contact info</h3>
+        <p id="contact-phone"> <i class="fas fa-phone"></i>+91 6253978546</p>
+        <p id="contact-email"> <i class="fas fa-envelope"></i>sakthidharmaraja@gmail.com</p>
+        <p> <i class="fas fa-map-marked-alt"></i>Namakkal, Tamilnadu, India</p>
+        <div class="share">
+
+          <a id="contact-linkedin" href="https://www.linkedin.com/in/saktheeswaridharmaraja/" class="fab fa-linkedin"
+            aria-label="LinkedIn" target="_blank"></a>
+          <a id="contact-github" href="https://github.com/Saktheeswarii/" class="fab fa-github" aria-label="GitHub"
+            target="_blank"></a>
+
+        </div>
+      </div>
+    </div>
+
+    <h1 class="credit">Designed </i> by <a href="https://www.linkedin.com/in/bhatishubham" target="_blank"> Saktheeswari </a></h1>
+    <!-- <i class="fa fa-heart pulse"></i> -->
+  </section>
+  <!-- footer section ends -->
+
+
+  <!-- scroll top btn -->
+  <a href="#home" aria-label="ScrollTop" class="fas fa-angle-up" id="scroll-top"></a>
+  <!-- scroll back to top -->
+
+
+  <!-- ==== ALL MAJOR JAVASCRIPT CDNS STARTS ==== -->
+  <!-- jquery cdn -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+    integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+  <!-- typed.js cdn -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.5/typed.min.js"
+    integrity="sha512-1KbKusm/hAtkX5FScVR5G36wodIMnVd/aP04af06iyQTkD17szAMGNmxfNH+tEuFp3Og/P5G32L1qEC47CZbUQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+
+
+
+  <!-- scroll reveal anim -->
+  <script src="https://unpkg.com/scrollreveal"></script>
+
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+
+  <!-- ==== ALL MAJOR JAVASCRIPT CDNS ENDS ==== -->
+
+  <script src="./Assets/js/script.js"></script>
+
+
+
+
+
+
+
+
+
+</body>
+
+</html>
+
+<!-- Prepare a container for your calendar. -->
+<script
+  src="https://cdn.rawgit.com/IonicaBizau/github-calendar/gh-pages/dist/github-calendar.min.js"
+>
+</script>
+
+<!-- Optionally, include the theme (if you don't want to struggle to write the CSS) -->
+<link
+  rel="stylesheet"
+  href="https://cdn.rawgit.com/IonicaBizau/github-calendar/gh-pages/dist/github-calendar.css"
+/>
+
+<script>
+    new GitHubCalendar(".calendar", "Sakthi");
+</script>
+
+
+<script src="https://smtpjs.com/v3/smtp.js"></script>
+
+
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
