--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <li><a class="nav-link projects" href="#projects">Projects</a></li>
         <li><a class="nav-link contact" href="#contact2">Contact</a></li>
         <li><button id="resume-button-1">
-            <a id="resume-link-1" href="Assets/Saktheeswari-D-FlowCV-Resume-20240527 (4).pdf" class="btn nav-link resume"><span>Resume </span>
+            <a id="resume-link-1" href="Assets/Saktheeswari-D-FlowCV-Resume-20240527 (4).pdf" target="_blank" class="btn nav-link resume"><span>Resume </span>
               <i class="fas fa-chevron-right"></i>
             </a>
           </button></li>
