--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <div class="resumebtn">
           <button id="resume-button-2">
 
-            <a id="resume-link-2" href="Assets/Saktheeswari-D-FlowCV-Resume-20240527 (4).pdf" class="btn"><span>Resume</span>
+            <a id="resume-link-2" target="_blank" href="Assets/Saktheeswari-D-FlowCV-Resume-20240527 (4).pdf" class="btn"><span>Resume</span>
               <i class="fas fa-chevron-right"></i>
             </a>
           </button>
